# batchop

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOP.md  README.md  TODO.md  precommit.toml  profiling.txt  pyproject.toml
batchop/: batchop.py  batchop2.py  colors.py  common.py  confirmation.py  db.py  english.py  exceptions.py  fileset.py  fileset2.py  filters.py  globreplace.py  main.py  parsing.py  patterns.py
tests/: common.py  test_batchop.py  test_batchop2.py  test_common.py  test_delete.py  test_fileset.py  test_globreplace.py  test_list.py  test_move.py  test_parsing.py  test_rename.py
tests/resources/: pride-and-prejudice-ch1.txt  pride-and-prejudice-ch2.txt
tests/scripts/: delete.txt  filters.txt  list.txt  move.txt  rename.txt
tests/test_tree/: constitution.txt
tests/test_tree/pride-and-prejudice/: pride-and-prejudice-ch1.txt  pride-and-prejudice-ch2.txt
tools/: release
